funcion basica del encargado del stock

--- a/3-CapaDatos/CapaDatos.csproj
+++ b/3-CapaDatos/CapaDatos.csproj
@@ -44,8 +44,11 @@
     <Compile Include="DALArticulo.cs" />
     <Compile Include="DALCliente.cs" />
     <Compile Include="DALEmpleado.cs" />
+    <Compile Include="DALEncargado.cs" />
+    <Compile Include="DALIngreso.cs" />
     <Compile Include="DALLogin.cs" />
     <Compile Include="DALLoginEmpleado.cs" />
+    <Compile Include="DALProveedor.cs" />
     <Compile Include="DALTipoEmpleado.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
