--- a/2-CapaNegocio/CapaNegocio.csproj
+++ b/2-CapaNegocio/CapaNegocio.csproj
@@ -47,9 +47,11 @@
     <Compile Include="Empleado.cs" />
     <Compile Include="Encargado.cs" />
     <Compile Include="Encriptacion.cs" />
+    <Compile Include="Ingreso.cs" />
     <Compile Include="Login.cs" />
     <Compile Include="LoginEmpleado.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Proveedor.cs" />
     <Compile Include="TipoEmpleado.cs" />
   </ItemGroup>
   <ItemGroup>
