Se agrega la facturacion del cliente: se puede visualizar el carrito, se puede agregar o quitar productos, y se registra la compra.

--- a/2-CapaNegocio/CapaNegocio.csproj
+++ b/2-CapaNegocio/CapaNegocio.csproj
@@ -47,6 +47,8 @@
     <Compile Include="Empleado.cs" />
     <Compile Include="Encargado.cs" />
     <Compile Include="Encriptacion.cs" />
+    <Compile Include="Factura.cs" />
+    <Compile Include="ItemCarrito.cs" />
     <Compile Include="Login.cs" />
     <Compile Include="LoginEmpleado.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
