--- a/3-CapaDatos/CapaDatos.csproj
+++ b/3-CapaDatos/CapaDatos.csproj
@@ -44,6 +44,7 @@
     <Compile Include="DALArticulo.cs" />
     <Compile Include="DALCliente.cs" />
     <Compile Include="DALEmpleado.cs" />
+    <Compile Include="DALFactura.cs" />
     <Compile Include="DALLogin.cs" />
     <Compile Include="DALLoginEmpleado.cs" />
     <Compile Include="DALTipoEmpleado.cs" />
