--- a/TPComercioElectronico/CapaPresentacion.csproj
+++ b/TPComercioElectronico/CapaPresentacion.csproj
@@ -58,6 +58,12 @@
     <Compile Include="frmAdministracion.Designer.cs">
       <DependentUpon>frmAdministracion.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmCarrito.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCarrito.Designer.cs">
+      <DependentUpon>frmCarrito.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmDetalle.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -103,6 +109,9 @@
     <EmbeddedResource Include="frmAdministracion.resx">
       <DependentUpon>frmAdministracion.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmCarrito.resx">
+      <DependentUpon>frmCarrito.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmDetalle.resx">
       <DependentUpon>frmDetalle.cs</DependentUpon>
     </EmbeddedResource>
@@ -131,6 +140,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="Properties\DataSources\CapaNegocio.Carrito.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
