--- a/3-CapaDatos/CapaDatos.csproj
+++ b/3-CapaDatos/CapaDatos.csproj
@@ -45,6 +45,7 @@
     <Compile Include="DALCliente.cs" />
     <Compile Include="DALEmpleado.cs" />
     <Compile Include="DALEncargado.cs" />
+    <Compile Include="DALGerente.cs" />
     <Compile Include="DALIngreso.cs" />
     <Compile Include="DALFactura.cs" />
     <Compile Include="DALLogin.cs" />
